--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,14 @@
-SUPABASE_URL=
-SUPABASE_PUBLISHABLE_API_KEY=
-SUPABASE_SECRET_KEY=
-SUPABSE_SERVICE_ROLE_KEY=
+# Supabase Configuration
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_PUBLISHABLE_API_KEY=your-anon-key
+SUPABASE_SECRET_KEY=your-secret-key
+SUPABSE_SERVICE_ROLE_KEY=your-service-role-key
+
+# Scraper Configuration
+MAX_WORKERS=2              # Concurrent browser instances
+SCRAPE_INTERVAL=60         # Default minutes between scrapes
+HEADLESS=true              # Set to false for debugging
+
+# Proxy Configuration (optional, comma-separated)
+# Format: http://user:pass@host:port or http://host:port
+PROXY_LIST=
